--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,3 +1,11 @@
+<mat-toolbar>
+    <a mat-icon-button
+       routerLink="/">
+        <mat-icon>arrow_back</mat-icon>
+    </a>
+    <span>Registro</span>
+</mat-toolbar>
+
 <form class="register-form"
       [formGroup]="form"
       (ngSubmit)="submit()"
