--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -4,24 +4,46 @@
 
 <main>
     <aside>
-        <form>
+        <form class="register-form"
+              [formGroup]="form"
+              (ngSubmit)="submit()"
+              novalidate>
             <mat-form-field class="full-width">
                 <mat-label>Email</mat-label>
                 <input matInput
                        type="email"
+                       formControlName="email"
+                       autocomplete="email"
                        required>
+                <mat-icon matSuffix>mail</mat-icon>
             </mat-form-field>
             <mat-form-field class="full-width">
                 <mat-label>Contraseña</mat-label>
                 <input matInput
-                       type="password"
+                       [type]="hidePassword() ? 'password' : 'text'"
+                       formControlName="password"
+                       autocomplete="new-password"
                        required>
+                <button type="button"
+                        mat-icon-button
+                        matSuffix
+                        (click)="toggleHidePassword()"
+                        aria-label="Mostrar/Ocultar contraseña">
+                    <mat-icon>{{
+                                  hidePassword() ? 'visibility' : 'visibility_off'
+                                }}</mat-icon>
+                </button>
             </mat-form-field>
             <div class="actions">
                 <a matButton="outlined"
                    routerLink="/register">Registro</a>
-                <button matButton="filled">Continuar</button>
+                <button matButton="filled"
+                        [disabled]="submitting()">Continuar</button>
             </div>
+            @if (serverError()) {
+            <div class="server-error"
+                 role="alert">{{ serverError() }}</div>
+            }
         </form>
     </aside>
     <section>
