Retoques y empiezo a rediseñar game-shell

--- a/src/app/layout/game-shell/game-shell.html
+++ b/src/app/layout/game-shell/game-shell.html
@@ -1,32 +1,19 @@
-<mat-sidenav-container class="h-screen">
-    <mat-sidenav mode="side"
-                 opened>
-        <div class="p-4 flex items-center gap-2">
-            <img ngSrc="/img/logo.svg"
-                 width="32"
-                 height="32"
-                 alt="Void" />
-            <span class="font-semibold">VOID</span>
-        </div>
-        <mat-nav-list>
-            <a mat-list-item
-               routerLink="/game/home">Inicio</a>
-            <a mat-list-item
-               routerLink="/game/system">Sistema</a>
-            <a mat-list-item
-               routerLink="/game/ship">Nave</a>
-            <a mat-list-item
-               routerLink="/game/profile">Perfil</a>
-        </mat-nav-list>
-    </mat-sidenav>
-
-    <mat-sidenav-content>
-        <mat-toolbar>
-            <span class="flex-1">Panel de control</span>
-            <!-- espacio para notificaciones o estado -->
-        </mat-toolbar>
-        <main class="p-4">
-            <router-outlet />
-        </main>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-toolbar>
+    <span class="flex">Void</span>
+    <button matIconButton
+            matTooltip="Perfil">
+        <mat-icon>account_box</mat-icon>
+    </button>
+    <button matIconButton
+            matTooltip="Cerrar sesión">
+        <mat-icon>logout</mat-icon>
+    </button>
+</mat-toolbar>
+<nav>
+    <a routerLink="/game/home">Inicio</a>
+    <a routerLink="/game/system">Sistema</a>
+    <a routerLink="/game/ship">Nave</a>
+</nav>
+<main>
+    <router-outlet />
+</main>
