--- a/src/app/pages/register/register.scss
+++ b/src/app/pages/register/register.scss
@@ -25,7 +25,7 @@
 
 .actions {
     display: flex;
-    gap: 8px;
+    justify-content: space-between;
     align-items: center;
     margin-top: 6px;
     flex-wrap: wrap;
